@@ -198,7 +198,7 @@ our %EXPORT_TAGS = (
 
 Exporter::export_ok_tags('internal');
 
-our $VERSION = '4.4_16';
+our $VERSION = '4.4_17';
 
 #
 # Chain Table
