@@ -27,7 +27,9 @@ None.
       I I I.  N E W   F E A T U R E S   I N   T H I S  R E L E A S E
 ----------------------------------------------------------------------------
 
-None.
+1)  The (param,value) pairs set in /etc/shorewall/params
+    (/etc/shorewall6/params) are now available at run-time with
+    EXPORTPARAMS=No. The EXPORTPARAMS parameter is now deprecated.
 
 ----------------------------------------------------------------------------
              I V.  R E L E A S E  4 . 4  H I G H L I G H T S
