@@ -1,6 +1,10 @@
 Changes in Shorewall 4.4.17 Beta 1
 
-1) None.
+1) Improve readability of logging logic in expand_rule().
+
+2) Improve efficency of oddball targets in process_rule1().
+
+3) Export (param,value) pairs with EXPORTPARAMS=No.
 
 Changes in Shorewall 4.4.16 RC 1
 
